force-app/main/default/objects/IntegrationMapItem__c/IntegrationMapItem__c.object-meta.xml
<CustomObject>
    <description>[a08][IntegrationMapItem__c] Mapa de integração item.</description>
    <label>Mapa de integração item</label>
    <nameField>
        <displayFormat>ITI-{000000000}</displayFormat>
        <label>Nome de Mapa de integração item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mapa de integração items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>