force-app/main/default/objects/IntegrationMapItem__c/fields/DefaultValueTxt__c.field-meta.xml
<CustomField>
    <fullName>DefaultValueTxt__c</fullName>
    <label>Valor padrão</label>
    <length>255</length>
    <type>Text</type>
</CustomField>