force-app/main/default/objects/IntegrationMapItem__c/fields/ExternalFieldNameTxt__c.field-meta.xml
<CustomField>
    <fullName>ExternalFieldNameTxt__c</fullName>
    <label>Campo externo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>