force-app/main/default/objects/IntegrationMapItem__c/fields/FormulaClassName__c.field-meta.xml
<CustomField>
    <fullName>FormulaClassName__c</fullName>
    <label>Nome da classe da fórmula</label>
    <length>255</length>
    <type>Text</type>
</CustomField>