force-app/main/default/objects/IntegrationMapItem__c/fields/IntegrationMap__c.field-meta.xml
<CustomField>
    <fullName>IntegrationMap__c</fullName>
    <label>Mapa de integração</label>
    <referenceTo>IntegrationMap__c</referenceTo>
    <relationshipLabel>Mapa de integração items</relationshipLabel>
    <relationshipName>IntegrationMapItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>