force-app/main/default/objects/IntegrationMapItem__c/fields/InternalFieldNameTxt__c.field-meta.xml
<CustomField>
    <fullName>InternalFieldNameTxt__c</fullName>
    <label>Campo interno</label>
    <length>255</length>
    <type>Text</type>
</CustomField>