force-app/main/default/objects/IntegrationMapItem__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <label>É ativo?</label>
    <type>Checkbox</type>
</CustomField>