force-app/main/default/objects/IntegrationMapItem__c/fields/IsRequired__c.field-meta.xml
<CustomField>
    <fullName>IsRequired__c</fullName>
    <defaultValue>true</defaultValue>
    <label>É obrigatório?</label>
    <type>Checkbox</type>
</CustomField>