force-app/main/default/objects/IntegrationMapItem__c/fields/RelatedObjectExternalIdTxt__c.field-meta.xml
<CustomField>
    <fullName>RelatedObjectExternalIdTxt__c</fullName>
    <label>Id externo do objeto relacionado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>