force-app/main/default/objects/IntegrationMapItem__c/fields/TypeTxt__c.field-meta.xml
<CustomField>
    <fullName>TypeTxt__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Boolean</fullName>
            </value>
            <value>
                <fullName>Decimal</fullName>
            </value>
            <value>
                <fullName>Formula</fullName>
            </value>
            <value>
                <fullName>Integer</fullName>
            </value>
            <value>
                <fullName>Lookup</fullName>
            </value>
            <value>
                <fullName>Lookup Formula</fullName>
            </value>
            <value>
                <fullName>String</fullName>
                <default>true</default>
                <label>String</label>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>DateTime</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>